docker-multinode/addons/ingress/gce.yaml
apiVersion: v1
kind: Service
metadata:
  # This must match the --default-backend-service argument of the l7 lb
  # controller and is required because GCE mandates a default backend.
  name: default-http-backend
  labels:
    k8s-app: glbc
spec:
  # The default backend must be of type NodePort.
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    k8s-app: glbc
